--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -18,6 +18,6 @@ jobs:
         #pip install -r requirements.txt
     - name: Test with pytest
       run: |
-        working-directory: /home/runner/work/pyrcs
+        working-directory: ..
         pip install pytest pytest-cov
         pytest --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
