--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -20,4 +20,5 @@ jobs:
       working-directory: /home/runner/pyrcs
       run: |
         pip install pytest pytest-cov
-        pytest --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
+        python -m pytest
+        #pytest --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
