--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -17,7 +17,7 @@ jobs:
         python -m pip install --upgrade pip bs4 pandas pyhelpers
         #pip install -r requirements.txt
     - name: Test with pytest
-      working-directory: /home/runner/pyrcs
+      #working-directory: /home/runner/pyrcs
       run: |
         pip install pytest pytest-cov
         python -m pytest
