--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -17,8 +17,6 @@ jobs:
         python -m pip install --upgrade pip bs4 pandas pyhelpers
         #pip install -r requirements.txt
     - name: Test with pytest
-      #working-directory: /home/runner/pyrcs
       run: |
         pip install pytest pytest-cov
-        python -m pytest
-        #pytest --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
+        python -m pytest --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
