--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -14,7 +14,7 @@ jobs:
         python-version: '3.x'
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip bs4 pandas pyhelpers
+        python -m pip install --upgrade pip bs4 pandas pyhelpers pygments
         #pip install -r requirements.txt
     - name: Test with pytest
       run: |
