--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -16,7 +16,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip bs4 pandas pyhelpers pygments sphinx
         #pip install -r requirements.txt
-    - name: Test with pytest
-      run: |
-        pip install pytest pytest-cov
-        python -m pytest --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
+    - name: Run tests and collect coverage
+      run: pytest --cov  --cov-report xml:cov.xml .
+    - name: Upload coverage reports to Codecov with GitHub Action
+      uses: codecov/codecov-action@v3
+      with:
+        files: cov.xml
+
+
