--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -17,7 +17,9 @@ jobs:
         python -m pip install --upgrade pip bs4 pandas pyhelpers pygments sphinx
         #pip install -r requirements.txt
     - name: Run tests and collect coverage
-      run: python -m pytest --cov  --cov-report xml:cov.xml .
+      run: |
+        python -m pip install pytest pytest-cov
+        python -m pytest --cov  --cov-report xml:cov.xml .
     - name: Upload coverage reports to Codecov with GitHub Action
       uses: codecov/codecov-action@v3
       with:
