--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -14,8 +14,8 @@ jobs:
         python-version: '3.x'
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip bs4 pandas pyhelpers pygments sphinx
-        #pip install -r requirements.txt
+        python -m pip install --upgrade pip #bs4 pandas pyhelpers pygments sphinx
+        python -m pip install -r requirements.txt
     - name: Run tests and collect coverage
       run: |
         python -m pip install pytest pytest-cov
